# clawe

./: .dir-locals.el  .envrc  .gitignore  .projectile  LICENSE  bb.edn  deps.edn  docker-compose.yml  doctor-topbar-electron.desktop  package-lock.json  package.json  postcss.config.js  readme.org  shadow-cljs.edn  shell.nix  tailwind.config.js  test_runner.clj  tests.edn  todo.org
.clj-kondo/: config.edn
.clj-kondo/hooks/: defcom.clj  defworkspace.clj  plasma.clj
.github/workflows/: bb_unit_tests.yml  cljs_unit_tests.yml  jvm_unit_tests.yml  linter.yml
awesome/: .luacheckrc  autorun.sh  awesome  bar.fnl  bindings.fnl  clawe-bindings.fnl  clawe.fnl  errors.fnl  icons.fnl  rc.lua  restart.fnl  rules.fnl  run-init.fnl  signals.fnl  spawns.fnl  stdout  table-indexof.lua  table-serialization.lua  titlebars.fnl  util.fnl  workspace-rules-magic.fnl  workspace-rules.fnl
awesome/dashboard/: dashboard.lua  helpers.lua
awesome/theme/: theme.lua
awesome/widgets/: dirty-repos.fnl  workrave.fnl  (+3 more)
docs/: README.md  _sidebar.md  changelog.md  defthing.org  doctor.org  index.html
i3/: config
notebooks/: clawe.clj  core.clj  dice.clj  git_status.clj  journal.clj  lichess.clj  org_daily.clj  org_recent.clj  todos.clj  wallpapers.clj
public/: index.html
resources/: clawe-template.edn  clawe.edn  db.edn  defthing.edn  doctor.edn  expo.edn
src/: backtick.clj  data_readers.clj  logger.clj  timer.clj  user.clj  util.clj  util.cljc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
sxhkd/: bg_shell  sxhkdrc
test/: test_util.clj
yabai/: .skhdrc  .yabairc
(+327 files in other folders)
